[package]
name = "rust-slint-ui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    'gallery', # slint widgets 画廊工程
    'slide_puzzle', # slint 幻灯片拼图游戏工程
    'printerdemo', # slint 嵌入式打印机 demo 工程
    'todo' # slint todo 例子工程
]

[dependencies]
rand = "0.8"
slint = "1.0.1"
image = { version = "0.24.0", default-features = false, features = [ "png" ] }


[build-dependencies]
slint-build = "1"