[package]
name = "android_demo"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
slint = { version = "1.5", features = ["backend-android-activity-05"] }
# slint = { git = "https://github.com/slint-ui/slint", branch = "master", features = ["backend-android-activity-05"]}

# slint = "1.5.0"
# i-slint-backend-android-activity = { version = "=1.5.0", features = ["native-activity"] }
# i-slint-backend-android-activity = "1.5.0"
