[package]
name = "printerdemo"
version = "0.1.0"
edition = "2021"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
path = "main.rs"
name = "printerdemo"

[dependencies]
slint = "1.0.1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"]}

[build-dependencies]
slint-build = "1"
