# Copyright © SixtyFPS GmbH <info@slint-ui.com>
# SPDX-License-Identifier: GPL-3.0-only OR LicenseRef-Slint-commercial

[package]
name = "slide_puzzle"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
path = "main.rs"
name = "slide_puzzle"

[dependencies]
rand = "0.8"
slint = "1.0.1"

[build-dependencies]
slint-build = "1"